force-app/main/default/objects/ssot__ContactPointDigitalId__dlm/fields/ssot__DigitalIdType__c.field-meta.xml
<CustomField>
    <fullName>ssot__DigitalIdType__c</fullName>
    <label>Digital Id Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DigitalIdType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>