force-app/main/default/objects/ssot__ContactPointDigitalId__dlm/fields/ssot__DigitalIdTypeAliasName__c.field-meta.xml
<CustomField>
    <fullName>ssot__DigitalIdTypeAliasName__c</fullName>
    <label>Digital Id Type Alias</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DigitalIdTypeAliasName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>