force-app/main/default/objects/ssot__ContactPointDigitalId__dlm/fields/ssot__DigitalIdValueText__c.field-meta.xml
<CustomField>
    <fullName>ssot__DigitalIdValueText__c</fullName>
    <label>Digital Id Value</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DigitalIdValueText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>