force-app/main/default/objects/ssot__ContactPointDigitalId__dlm/fields/ssot__rel_1726825199894_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1726825199894_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactPointDigitalId_IndividualId_m_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>ContactPointDigitalId_IndividualId_m_rel</relationshipLabel>
    <relationshipName>rel_1726825199894_end</relationshipName>
    <type>Lookup</type>
</CustomField>